<resources>
    <string name="app_name">shifumi</string>
<<<<<<< HEAD
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Finaliser l\'inscription</string>
    <string name="action_sign_in_short">Finaliser</string>
    <string name="name_hint">Name</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="sign_in">Se connecter</string>

    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
=======
    <string name="sign_in_button">Se connecter</string>
    <string name="sign_up_button">S\'inscrire</string>
    <string name="sign_up_state">Création de compte 1/2</string>
    <string name="sign_in_state">Se connecter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_name">Prénom</string>
    <string name="hint_surname">Nom</string>
    <string name="hint_birthdate">Date de naissance</string>

    <string name="sex">Sexe</string>
    <string name="radio_male">Homme</string>
    <string name="radio_female">Femme</string>
    <string name="radio_other">Autre</string>
    <string name="sex_other_precise">Préciser</string>

    <string name="sign_up_continue">CONTINUER</string>

    <string name="hint_email">Adresse e-mail*</string>
    <string name="hint_create_pswd">Créer un mot de passe</string>
    <string name="hint_pswd">Mot de passe*</string>
    <string name="hint_pswd_confirm">Confirmer le mot de passe</string>

    <string name="sign_up_finish">FINALISER</string>

    <string name="game_1_title">Classique</string>
    <string name="game_1_subtitle">jeu de base</string>
    <string name="action_solo">SOLO</string>
    <string name="action_multi">MULTI</string>

    <string name="game_2_title">Le twist</string>
    <string name="game_2_subtitle">Variant puit</string>

    <string name="game_3_title">Le méli-mélo</string>
    <string name="game_3_subtitle">Puissance 7</string>

    <string name="app_title">Shifumi</string>

    <string name="more">Settings</string>
    <string name="content_description_more">Settings</string>

    <string name="search"></string>
    <string name="content_description_search"></string>

    <string name="favorite"></string>
    <string name="content_description_favorite"></string>

    <string name="vs_text">VS</string>
    <string name="you_text">You</string>
    <string name="opponent_text">\???</string>

    <string name="create_button">Créer un salon</string>
    <string name="game_status">En attente d\'un joueur</string>
    <string name="round">Manche 1</string>

    <string name="leaderboard_title">Classement général</string>
    <string name="player_indication"></string>
>>>>>>> esiee
</resources>