<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <TextView
        android:id="@+id/sign_up_state"
        android:layout_width="130dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/sign_in_state"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:hint="@string/hint_email"
        app:helperText="* requis"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_pswd_layout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_email_input"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_pswd_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:hint="@string/hint_pswd"
        app:endIconMode="password_toggle"
        app:helperText="* requis"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/last_sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/email_text_layout"
        tools:layout_editor_absoluteX="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_pswd_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/last_sign_in_button"
        android:layout_width="357dp"
        android:layout_height="73dp"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_in_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_pswd_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>