<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSelectActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="3dp"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_baseline_home_24"
            app:title="@string/app_title">

        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/game_1_title"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:text="@string/game_1_subtitle"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="151dp"
                        android:background="@color/teal_200"
                        android:scaleType="centerCrop" />

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:id="@+id/solo_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/action_solo" />

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:id="@+id/multi_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_multi" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="50dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/game_2_title"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:text="@string/game_2_subtitle"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="151dp"
                        android:background="@color/teal_200"
                        android:scaleType="centerCrop" />

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:id="@+id/solo_2"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/action_solo" />

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:id="@+id/multi_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_multi" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="50dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/game_3_title"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:text="@string/game_3_subtitle"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="151dp"
                        android:background="@color/teal_200"
                        android:scaleType="centerCrop" />

                    <!-- Buttons -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:id="@+id/solo_3"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/action_solo" />

                        <com.google.android.material.button.MaterialButton
                            style="?attr/borderlessButtonStyle"
                            android:id="@+id/multi_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_multi" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>