<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.GameActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <ImageView
        android:id="@+id/rock"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/rock"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/hole"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/hole"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/fire"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/fire"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/air"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/air"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/paper"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/paper"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/sponge"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/sponge"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/scissors"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/scissors"
        android:contentDescription="TODO"

        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/water"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/water"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/move_p1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <ImageView
        android:id="@+id/move_p2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <TextView
        android:id="@+id/vs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/move_p1"
        app:layout_constraintEnd_toStartOf="@+id/move_p2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/move_p1"
        app:layout_constraintTop_toTopOf="@+id/move_p1" />

    <TextView
        android:id="@+id/you_text"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:layout_marginBottom="20dp"
        android:text="@string/you_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/move_p1"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline7" />

    <TextView
        android:id="@+id/opponent_text"
        android:layout_width="142dp"
        android:layout_height="27dp"
        android:text="@string/opponent_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/you_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/player_indication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:indeterminateOnly="true"
        android:textColor="@color/black"
        android:text="@string/player_indication"
        app:layout_constraintEnd_toEndOf="@+id/vs_text"
        app:layout_constraintStart_toStartOf="@+id/vs_text"
        app:layout_constraintTop_toBottomOf="@+id/vs_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/game_status_text_view"
        android:layout_width="339dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/game_status"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/round_text_view"
        android:layout_width="287dp"
        android:layout_height="28dp"
        android:layout_marginTop="72dp"
        android:text="@string/round"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>